--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,8 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: oklch(21% 0.034 264.665);
+  font-family: var(--font-context);
 }
 
 @theme inline {
@@ -10,6 +11,16 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-title: var(--font-title);
+  --font-context: var(--font-context);
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-title);
+}
+
+p, body {
+  font-family: var(--font-context);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,5 +33,4 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
